# rainbow-os

./: .bochsrc  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Makefile.common  Makefile.in  Makefile.rules  README.md  bochsrc  configure  defaults.mk  rules.mk  todo
acpi/: Makefile  acpi.c  acrainbow.h  crt.cpp  main.c  module.mk
boot/: CMakeLists.txt  Makefile  backlog.txt  boot.asm  boot.cpp  boot.hpp  boot_ia32.asm  boot_x86_64.asm  console.cpp  console.hpp  crt.cpp  display.cpp  elf.h  (+18 more)
boot/src/: CMakeLists.txt  Console.cpp  Console.hpp  EfiConsole.cpp  EfiConsole.hpp  EfiDisplay.cpp  EfiDisplay.hpp  EfiFile.cpp  EfiFile.hpp  GraphicsDisplay.cpp  GraphicsDisplay.hpp  LogFile.cpp  LogFile.hpp  MemoryMap.cpp  MemoryMap.hpp  README.md  acpi.cpp  acpi.hpp  boot.cpp  boot.hpp  crt0.cpp  crt0.hpp  elf.cpp  elf.hpp  main.cpp  malloc.cpp  pci.cpp  uefi.cpp  uefi.hpp
boot/src/aarch64/: PageTable.cpp  PageTable.hpp  VirtualMemory.cpp  check.cpp  trampoline.S  trampoline.cpp
boot/src/devices/: README.md
boot/src/runtime/: crt0.cpp  malloc.cpp
boot/src/x86_64/: PageTable.cpp  PageTable.hpp  VirtualMemory.hpp  check.cpp  trampoline.S  trampoline.cpp
boot/test/: CMakeLists.txt  Console.test.cpp  EfiConsole.test.cpp  Makefile  MemoryMap.test.cpp  globals.cpp  main.cpp  mock.hpp  stubs.cpp  test_arm.cpp  test_memory.cpp  uefi.test.cpp
boot/test/data/: raspi3_atags.txt  raspi3_fdt.dtb  raspi3_fdt.txt
kernel/src/: CMakeLists.txt  DeviceInfo.cpp  DeviceInfo.hpp  DeviceManager.hpp  ErrorCode.hpp  Interrupt.hpp  InterruptController.hpp  InterruptSystem.hpp  README.md  Scheduler.cpp  Scheduler.hpp  Spinlock.cpp  Spinlock.hpp  Task.cpp  Task.hpp  arch.hpp  display.cpp  display.hpp  kernel.cpp  memory.cpp  memory.hpp  pci.cpp  pci.hpp  uefi.cpp  uefi.hpp
kernel/src/aarch64/: Cpu.cpp  Cpu.hpp  CpuContext.S  CpuContext.hpp  CpuData.hpp  Interrupt.cpp  InterruptSystem.cpp  PageTable.cpp  README_raspi3.md  SerialPort.cpp  SerialPort.hpp  arch.cpp  exception.cpp  interrupt.S  interrupt.cpp  interrupt.hpp  kernel.lds  raspi3.cpp  raspi3.hpp  start.S  task.S  task.cpp  task.hpp  virt.hpp
kernel/src/aarch64/devices/: GenericTimer.cpp  GenericTimer.hpp  GicCpuInterface.cpp  GicCpuInterface.hpp  GicDistributor.cpp  GicDistributor.hpp
kernel/src/acpi/: Acpi.cpp  Acpi.hpp  AcpiImpl.hpp  acpi.cpp  acpi.hpp  lai.cpp  lai.hpp
kernel/src/devices/: Device.cpp  Device.hpp  DeviceInfo.cpp  DeviceInfo.hpp  DeviceManager.cpp  DeviceManager.hpp  DeviceRegistry.cpp  DeviceRegistry.hpp  PciDevice.cpp  PciDevice.hpp
kernel/src/devices/pci/: Vga.cpp  Vga.hpp  VirtioGpu.cpp  VirtioGpu.hpp
kernel/src/interfaces/: IClock.hpp  IInterruptController.hpp  IInterruptHandler.hpp  ITimer.hpp
kernel/src/runtime/: crt0.cpp  malloc.cpp
kernel/src/todo/: acpi.cpp  acpi.hpp  pci.cpp  pci.hpp
kernel/src/x86_64/: Cpu.cpp  Cpu.hpp  CpuContext.S  CpuContext.hpp  CpuData.hpp  Interrupt.cpp  InterruptSystem.cpp  InterruptTable.cpp  InterruptTable.hpp  PageTable.cpp  SerialPort.cpp  SerialPort.hpp  arch.cpp  exception.cpp  interrupt.S  interrupt.cpp  interrupt.hpp  kernel.lds  start.S  task.S  task.cpp  task.hpp
kernel/src/x86_64/devices/: Apic.cpp  Apic.hpp  Hpet.cpp  Hpet.hpp  IoApic.cpp  IoApic.hpp  Pic.cpp  Pic.hpp  Pit.cpp  Pit.hpp
kernel/src/x86_64/timers/: Hpet.cpp  Hpet.hpp
metal/src/: CMakeLists.txt  acpi.cpp  time.cpp  unicode.cpp
metal/src/arch/aarch64/: cpu.cpp
metal/src/arch/x86_64/: cpu.cpp
metal/src/c/: abort.c  abort.cpp  assert.cpp  memcmp.c  memcmp.cpp  memcpy.c  memcpy.cpp  memset.c  memset.cpp  mktime.cpp  strcmp.c  strcmp.cpp  strlen.c  strlen.cpp  wcslen.c  wcslen.cpp
metal/src/c++/: runtime.cpp
metal/src/graphics/: Edid.cpp  GraphicsConsole.cpp  PixelFormat.cpp  SimpleDisplay.cpp  Surface.cpp  VgaFont.cpp  VgaFont.hpp
metal/src/log/: core.cpp  stream.cpp
metal/test/: CMakeLists.txt  LogStream.test.cpp  atomic.test.cpp  expected.test.cpp  mktime.test.cpp  shared_ptr.test.cpp  string.test.cpp  time.test.cpp  unicode.test.cpp
src/boot/: Makefile  boot.cpp  boot.hpp  crt.cpp  display.cpp  elfloader.cpp  elfloader.hpp  fatal.cpp  memory.cpp  memory.hpp  memory.test.cpp  meson.build  meson_options.txt  module.mk  vmm.hpp
src/boot/arch/: meson.build  module.mk
src/boot/arch/aarch64/: vmm.cpp
src/boot/arch/arm/: check.cpp  vmm.cpp
src/boot/arch/x86/: vmm.cpp  vmm_pae.hpp  vmm_x86_64.hpp
src/boot/machine/: module.mk
src/boot/machine/bios/: bios.S  bios.cpp  bios.hpp  bios.lds  grub.cfg  malloc.cpp  meson.build  module.mk  multiboot.cpp  multiboot.hpp  start.S  vbedisplay.cpp  vbedisplay.hpp  vesa.cpp  vesa.hpp
src/boot/machine/efi/: efiboot.cpp  efiboot.hpp  efidisplay.cpp  efidisplay.hpp  efifilesystem.cpp  efifilesystem.hpp  jumpkernel.cpp  malloc.cpp  meson.build  module.mk
src/boot/machine/efi/aarch64/: efi.lds  reloc.cpp  start.S
src/boot/machine/efi/ia32/: efi.lds  reloc.cpp  start.S
src/boot/machine/efi/x86_64/: efi.lds  reloc.cpp  start.S
src/boot/machine/raspi/: README.md  malloc.cpp  module.mk
src/boot/machine/raspi/aarch64/: raspi.lds  start.S
src/boot/machine/raspi/arm/: raspi.lds
src/boot/runtime/: crt.cpp  malloc.cpp  newlib.cpp  syscalls.cpp
src/boot/test/: Makefile  mock.cpp
src/metal/: console.hpp  log.hpp  meson.build  module.mk
src/metal/include/c++/: README.md  mutex  ostream  system_error  vector
src/metal/include/metal/: arch.hpp  cpu.hpp  helpers.hpp  interrupt.hpp  memory.hpp
src/metal/include/metal/aarch64/: cpu.hpp  interrupt.hpp  memory.hpp
src/metal/include/metal/arm/: memory.hpp
src/metal/include/metal/x86/: cpu.hpp  cpuid.hpp  interrupt.hpp  io.hpp  memory.hpp  mtrr.hpp
src/metal/src/arch/x86/: cpuid.cpp  mtrr.cpp
src/metal/src/c++/: __cxa_atexit.cpp  new.cpp  shared_ptr.cpp
src/metal/src/libc/: abort.cpp  assert.cpp  memcmp.cpp  memcpy.cpp  memmove.cpp  memset.cpp  printf.cpp  putchar.cpp  puts.cpp  strcmp.cpp  strcpy.cpp  strlen.cpp
src/metal/src/runtime/: cpprt.cpp
src/metal/src/x86/: cpu.cpp  cpuid.cpp
src/metal/x86/: cpu.cpp  memory.hpp
src/metal/x86_64/: crti.S
(+945 files in other folders)
